--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,11 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+  margin:0 auto;
+  height : 100vh;
 }
 
 a {
